--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,13 +5,13 @@ set -g bell-action any
 set -g default-terminal screen-256color
 
 # Keep your finger on ctrl, or don't
-bind-key ^D detach-client
+# bind-key ^D detach-client
 
 # Create splits and vertical splits
-bind-key v split-window -h
-bind-key ^V split-window -h
-bind-key s split-window
-bind-key ^S split-window
+#bind-key v split-window -h
+#bind-key ^V split-window -h
+#bind-key s split-window
+#bind-key ^S split-window
 
 # Pane resize in all four directions using vi bindings.
 # Can use these raw but I map them to shift-ctrl-<h,j,k,l> in iTerm.
@@ -22,10 +22,10 @@ bind-key L resize-pane -R
 
 # Use vi keybindings for tmux commandline input.
 # Note that to get command mode you need to hit ESC twice...
-set -g status-keys vi
+#set -g status-keys vi
 
 # Use vi keybindings in copy and choice modes
-setw -g mode-keys vi
+#setw -g mode-keys vi
 
 # easily toggle synchronization (mnemonic: e is for echo)
 # sends input to all panes in a given window.
@@ -62,8 +62,8 @@ bind a send-prefix
 set -sg escape-time 0
 
 # Screen like binding for last window
-unbind l
-bind C-a last-window
+#unbind l
+#bind C-a last-window
 
 # Bigger history
 set -g history-limit 100000
