--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,21 +4,23 @@ set -g bell-action any
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
 set -g default-terminal screen-256color
 
+# set -g default-shell $SHELL
+
 # Keep your finger on ctrl, or don't
 # bind-key ^D detach-client
 
 # Create splits and vertical splits
-bind-key v split-window -h -p 50 -c "#{pane_current_path}"
+bind-key | split-window -h -p 50 -c "#{pane_current_path}"
 bind-key ^V split-window -h -p 50 -c "#{pane_current_path}"
-bind-key s split-window -p 50 -c "#{pane_current_path}"
+bind-key - split-window -p 50 -c "#{pane_current_path}"
 bind-key ^S split-window -p 50 -c "#{pane_current_path}"
 
 # Pane resize in all four directions using vi bindings.
 # Can use these raw but I map them to shift-ctrl-<h,j,k,l> in iTerm.
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind -r H resize-pane -L 10
+bind -r J resize-pane -D 10
+bind -r K resize-pane -U 10
+bind -r L resize-pane -R 10
 
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
@@ -56,20 +58,20 @@ set -g message-bg colour221
 set -g message-attr bold
 set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀ #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
 set -g window-status-format "#[fg=colour235,bg=colour252,bold] #I #W "
-set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=black,bg=colour39,noreverse,bold] #I: #W #[fg=colour39,bg=colour234,nobold]⮀"
-set -g status-right 'Online:#{online_status}🎵#(~/.yadr/tmux/tmux-spotify-info)%-I:%M %p %a %-m/%-d/%y'
+set -g window-status-current-format "#[fg=colour252,bg=colour39]⮀#[fg=colour252,bg=colour39,noreverse,bold] #I: #W #[fg=colour39,bg=colour234,nobold]⮀"
+set -g status-right 'Now Playing: #(~/.yadr/tmux/tmux-spotify-info) %-I:%M %p %a %-m/%-d/%y'
 
 # Patch for OS X pbpaste and pbcopy under tmux.
 set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
 
 # Enable mouse mode for old versions of tmux
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
+
+# don't rename windows automatically
+set-option -g allow-rename off
 
 # OSX open command fix
-set -g default-command "reattach-to-user-namespace -l /bin/bash"
+# set -g default-command "reattach-to-user-namespace -l /bin/bash"
 
 
 
